<resources>
    <string name="app_name">My Application</string>
    <string name="background_image">background_image</string>
    <string name="app_logo">app_logo</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_dominate">Find A Team In Your City dominate</string>
    <string name="the_league">The League</string>
    <string name="get_started">get started</string>
    <string name="background2_image">background2_image</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-ed</string>
    <string name="next">Next</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">FINISH</string>
    <string name="searchleague">you are selecting co ed league</string>
</resources>
